--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "MeetupsApp",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4"
   }
 }
